testsuite/tests/typecheck/should_fail/tcfail184.stderr

tcfail184.hs:9:19: error:
    • Illegal polymorphic type: forall a. Ord a => [a] -> [a]
    • In the definition of data constructor ‘MkSwizzle’
      In the newtype declaration for ‘Swizzle’
    Suggested fix: Perhaps you intended to use RankNTypes
